--- a/index.html
+++ b/index.html
@@ -282,17 +282,17 @@
         <div class="container mx-auto">
           <h2 class="section-title">Blog</h2>
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <a href="blog.html" target="_blank" rel="noopener noreferrer" class="writing-card">
+            <a href="/src/blog.html" target="_blank" rel="noopener noreferrer" class="writing-card">
               <h3>Article Title 1: A Deep Dive into Project X</h3>
               <p>A short preview of the article, explaining the key takeaways and what I learned...</p>
               <span class="read-more">Read More &rarr;</span>
             </a>
-            <a href="blog.html" target="_blank" rel="noopener noreferrer" class="writing-card">
+            <a href="/src/blog.html" target="_blank" rel="noopener noreferrer" class="writing-card">
               <h3>Article Title 2: Thoughts on a New Paper</h3>
               <p>Analyzing a recent academic paper on [topic] and its implications for the industry...</p>
               <span class="read-more">Read More &rarr;</span>
             </a>
-            <a href="blog.html" target="_blank" rel="noopener noreferrer" class="writing-card">
+            <a href="/src/blog.html" target="_blank" rel="noopener noreferrer" class="writing-card">
               <h3>Article Title 3: Explaining a Complex Concept</h3>
               <p>Breaking down [difficult_concept] in a way that is easy to understand and apply...</p>
               <span class="read-more">Read More &rarr;</span>
