--- a/src/blog.html
+++ b/src/blog.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Blog Post - Lebone's Portfolio</title>
-        <link rel="stylesheet" href="/src/index.css" />
+        <link rel="stylesheet" href="index.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
@@ -20,14 +20,14 @@
 
         <header class="fixed top-0 left-0 w-full z-50 px-8 py-4 transition-all duration-300">
           <nav class="flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-accent">LK</a> <ul class="hidden md:flex space-x-8">
-              <li><a href="index.html#about" class="nav-link">About</a></li>
-              <li><a href="index.html#experience" class="nav-link">Experience</a></li>
-              <li><a href="index.html#certifications" class="nav-link">Certifications</a></li>
-              <li><a href="index.html#skills" class="nav-link">Skills</a></li>
-              <li><a href="index.html#projects" class="nav-link">Projects</a></li>
-              <li><a href="index.html#writing" class="nav-link">Writing</a></li>
-              <li><a href="index.html#contact" class="nav-link">Contact</a></li>
+            <a href="../index.html" class="text-2xl font-bold text-accent">LK</a> <ul class="hidden md:flex space-x-8">
+              <li><a href="../index.html#about" class="nav-link">About</a></li>
+              <li><a href="../index.html#experience" class="nav-link">Experience</a></li>
+              <li><a href="../index.html#certifications" class="nav-link">Certifications</a></li>
+              <li><a href="../index.html#skills" class="nav-link">Skills</a></li>
+              <li><a href="../index.html#projects" class="nav-link">Projects</a></li>
+              <li><a href="../index.html#writing" class="nav-link">Writing</a></li>
+              <li><a href="../index.html#contact" class="nav-link">Contact</a></li>
             </ul>
             <button id="mobile-menu-button" class="md:hidden text-textPrimary" aria-label="Open navigation menu" aria-expanded="false" aria-controls="mobile-menu">
               <svg id="hamburger-icon" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
@@ -38,13 +38,13 @@
 
         <div id="mobile-menu" class="hidden fixed inset-0 bg-primary z-40" role="dialog" aria-modal="true">
           <ul class="flex flex-col items-center justify-center h-full space-y-8">
-            <li><a href="index.html#about" class="nav-link-mobile">About</a></li>
-            <li><a href="index.html#experience" class="nav-link-mobile">Experience</a></li>
-            <li><a href="index.html#certifications" class="nav-link-mobile">Certifications</a></li>
-            <li><a href="index.html#skills" class="nav-link-mobile">Skills</a></li>
-            <li><a href="index.html#projects" class="nav-link-mobile">Projects</a></li>
-            <li><a href="index.html#writing" class="nav-link-mobile">Writing</a></li>
-            <li><a href="index.html#contact" class="nav-link-mobile">Contact</a></li>
+            <li><a href="../index.html#about" class="nav-link-mobile">About</a></li>
+            <li><a href="../index.html#experience" class="nav-link-mobile">Experience</a></li>
+            <li><a href="../index.html#certifications" class="nav-link-mobile">Certifications</a></li>
+            <li><a href="../index.html#skills" class="nav-link-mobile">Skills</a></li>
+            <li><a href="../index.html#projects" class="nav-link-mobile">Projects</a></li>
+            <li><a href="../index.html#writing" class="nav-link-mobile">Writing</a></li>
+            <li><a href="../index.html#contact" class="nav-link-mobile">Contact</a></li>
           </ul>
         </div>
 
@@ -153,6 +153,6 @@
           </div>
         </footer>
 
-        <script type="module" src="/src/main.js"></script>
+        <script type="module" src="main.js"></script>
       </body>
     </html>
