--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div>
             <h2 class="section-title">About Me</h2>
             <p class="text-lg text-textSecondary">
-              I'm a computer science student passionate about building efficient, scalable systems. I thrive on solving complex problems, and I'm currently focused on applying my skills in machine learning and data analysis to the world of quantitative finance. My goal is to bridge the gap between advanced technology and financial modeling.
+              I’m a software developer passionate about solving problems through creative and efficient solutions. I value the power of data and excel at uncovering meaningful insights from it. By embracing AI to enhance my productivity, I strive to build intelligent, impactful systems that push technology forward.
             </p>
           </div>
           <div>
@@ -283,18 +283,8 @@
           <h2 class="section-title">Blog</h2>
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <a href="/src/blog.html" target="_blank" rel="noopener noreferrer" class="writing-card">
-              <h3>Article Title 1: A Deep Dive into Project X</h3>
-              <p>A short preview of the article, explaining the key takeaways and what I learned...</p>
-              <span class="read-more">Read More &rarr;</span>
-            </a>
-            <a href="/src/blog.html" target="_blank" rel="noopener noreferrer" class="writing-card">
-              <h3>Article Title 2: Thoughts on a New Paper</h3>
-              <p>Analyzing a recent academic paper on [topic] and its implications for the industry...</p>
-              <span class="read-more">Read More &rarr;</span>
-            </a>
-            <a href="/src/blog.html" target="_blank" rel="noopener noreferrer" class="writing-card">
-              <h3>Article Title 3: Explaining a Complex Concept</h3>
-              <p>Breaking down [difficult_concept] in a way that is easy to understand and apply...</p>
+              <h3>AI-Powered Repair Diagnosis Assistant</h3>
+              <p>Users often describe device failures in ambiguous, non-technical language, making automated diagnosis difficult...</p>
               <span class="read-more">Read More &rarr;</span>
             </a>
           </div>
@@ -312,8 +302,8 @@
     <footer class="py-8 text-center text-textSecondary bg-primary">
       <div class="container mx-auto">
         <div class="flex justify-center space-x-8 mb-4">
-          <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/lk-montoedi" class="social-icon"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/lebone-montoedi-56b9932a3" class="social-icon"><i class="fab fa-linkedin"></i></a>
         </div>
         <p>&copy; 2025 Lebone KM. All rights reserved.</p>
       </div>
