--- a/index.html
+++ b/index.html
@@ -236,28 +236,28 @@
               <img src="/src/assets/project-1.png" alt="A project screenshot" class="project-image w-full aspect-video object-cover rounded-t-lg" />
               <div class="p-6">
                 <h3 class="text-xl font-bold mb-2">Art Auction</h3>
-                <p class="text-textSecondary mb-4">This is a platform that supports local artisans to establish their brand by allowing them to tell their story.</p>
+                <p class="text-textSecondary mb-4">Created a full-stack auction platform (HTML, CSS, C#, ASP.NET, SQL Server) that empowers artisans to upload art, share their inspiration, and host competitive bidding.</p>
                 <button class="btn-details">View Details</button>
               </div>
             </div>
             <!-- Project Card 2 -->
-            <!-- <div class="project-card">
-              <img src="/src/assets/project.jpg" alt="A project screenshot" class="project-image w-full aspect-video object-cover rounded-t-lg" />
+            <div class="project-card">
+              <img src="/src/assets/eskom.png" alt="A project screenshot" class="project-image w-full aspect-video object-cover rounded-t-lg" />
               <div class="p-6">
-                <h3 class="text-xl font-bold mb-2">Project Two</h3>
-                <p class="text-textSecondary mb-4">A brief but engaging description of the project.</p>
+                <h3 class="text-xl font-bold mb-2">Eskom All-Rounder Management</h3>
+                <p class="text-textSecondary mb-4">Developed a comprehensive digital platform for the Eskom Expo to streamline judging, event, school, project, and user management — replacing the manual paper-based system with an efficient, data-driven solution.</p>
                 <button class="btn-details">View Details</button>
               </div>
             </div>
-             Project Card 3
+             <!-- Project Card 3 -->
             <div class="project-card">
               <img src="/src/assets/project.jpg" alt="A project screenshot" class="project-image w-full aspect-video object-cover rounded-t-lg" />
               <div class="p-6">
-                <h3 class="text-xl font-bold mb-2">Project Three</h3>
-                <p class="text-textSecondary mb-4">A brief but engaging description of the project.</p>
+                <h3 class="text-xl font-bold mb-2">Web Gemini Summarizer</h3>
+                <p class="text-textSecondary mb-4">Developed a full-stack application that orchestrates Google's cutting-edge Gemini AI to deliver on-demand text summarization, integrating a secure, token-based Firebase authentication flow with a dynamic, asynchronous chat-based UI.</p>
                 <button class="btn-details">View Details</button>
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </section>
@@ -304,6 +304,7 @@
         <div class="flex justify-center space-x-8 mb-4">
           <a href="https://github.com/lk-montoedi" class="social-icon"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/lebone-montoedi-56b9932a3" class="social-icon"><i class="fab fa-linkedin"></i></a>
+          <a href="mailto:montoedilebone@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
         </div>
         <p>&copy; 2025 Lebone KM. All rights reserved.</p>
       </div>
@@ -318,6 +319,14 @@
         <p id="modal-description" class="mb-4"></p>
         <div id="modal-tech-stack" class="mb-6 flex flex-wrap gap-2"></div>
         <div id="modal-links" class="flex space-x-4"></div>
+      </div>
+    </div>
+
+    <div id="floating-socials" class="fixed bottom-8 right-8 z-50">
+      <div class="flex flex-col space-y-4">
+        <a href="https://github.com/lk-montoedi" class="social-icon-floating"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/lebone-montoedi-56b9932a3" class="social-icon-floating"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:montoedilebone@gmail.com" class="social-icon-floating"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
 
