Added UI buttons

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <section id="resume" class="py-20 px-8 bg-secondary text-center">
         <div class="container mx-auto">
           <h2 class="section-title">Resume</h2>
-          <a href="/src/assets/resume.pdf" download class="btn btn-primary">Download Resume</a>
+          <a href="/src/assets/Lebone-Montoedi-CV.pdf" download class="btn btn-primary">Download Resume</a>
         </div>
       </section>
     </main>
@@ -322,11 +322,11 @@
       </div>
     </div>
 
-    <div id="floating-socials" class="fixed bottom-8 right-8 z-50">
+    <div id="floating-socials" class="fixed bottom-8 right-8 z-50 bg-secondary p-4 rounded-lg">
       <div class="flex flex-col space-y-4">
-        <a href="https://github.com/lk-montoedi" class="social-icon-floating"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/lebone-montoedi-56b9932a3" class="social-icon-floating"><i class="fab fa-linkedin"></i></a>
-        <a href="mailto:montoedilebone@gmail.com" class="social-icon-floating"><i class="fas fa-envelope"></i></a>
+        <a href="https://github.com/lk-montoedi" class="social-icon"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/lebone-montoedi-56b9932a3" class="social-icon"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:montoedilebone@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
 
